fix some palette sizing on small devices, maybe finally fix scaling of canvas

--- a/public/style.css
+++ b/public/style.css
@@ -115,8 +115,8 @@ button {
   right: 0;
   margin: auto;
 
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  /* height: 100%; */
 
   max-width: 100%;
   max-height: 100%;
@@ -168,6 +168,10 @@ button {
   display: none;
 }
 
+.modal #stats {
+  margin-bottom: 8px;
+}
+
 .modal .paletteContainer {
   position: absolute;
   bottom: 28px;
@@ -176,19 +180,25 @@ button {
   display: flex;
   align-items: center;
   flex-direction: column;
-  opacity: 0;
   transition: opacity 0.25s;
   z-index: 3;
+  pointer-events: none;
 }
 
-.modal #stats {
-  margin-bottom: 8px;
+.modal #palette {
+  opacity: 0;
+}
+
+.modal #palette .swatch {
+  max-width: 4vw;
+  max-height: 4vw;
 }
 
 .modal #palette,
 .modal #stats {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 8px 12px;
   background: rgba(255, 255, 255, 0.75);
   border-radius: 6px;
